public/app/index.css
html {
    height: 100%;
    overflow: hidden;
}
body {
    height: 100%;
    font-size: 16px;
}
*, *:before, *:after {
    box-sizing: border-box;
}

#root {
    width: 100%;
    height: 100%;
}
#app {
    display: flex;
    flex-direction: column;
    gap: 8px;

    height: 100%;
    padding: 16px;
}

/* Drawer content */
.drawer {
    display: flex;
    flex-direction: column;
    gap: 8px;

    flex: 1;
}

.drawer > .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 16px;

    padding: 8px;
    border-radius: 16px 16px 0px 0px;
    background-color: var(--container-color);
}
.drawer > .header > .title {
    font-size: 24px;
    font-weight: bold;
}
.drawer > .content {
    display: flex;
    flex-direction: column;

    flex: 1;
    overflow-y: auto;
    padding: 8px;
    border-radius: 0px 0px 16px 16px;
    background-color: var(--container-color);
}

.start-convo-btn-container, .join-room-btn-container {
    border-radius: 33px;
    padding: 8px;
    width: calc(var(--ic-small) + 16px);
    height: calc(var(--ic-small) + 16px);
    cursor: pointer;
}
.start-convo-btn-container:hover, .join-room-btn-container:hover {
    background-color: var(--hover-color);
}
.start-convo-btn-container:active, .join-room-btn-container:active {
    background-color: var(--active-color);
}

/* Drawer content */
.channel-tab {
    display: flex;
    gap: 0.5ch;
    align-items: center;

    cursor: pointer;
    padding: 8px;
    border-radius: 33px;
}
.channel-tab:hover {
    background-color: var(--hover-color);
}
.channel-tab:active {
    background-color: var(--active-color);
}

/* Explore drawer content */
.search-container {
    display: flex;
    flex-direction: row;
    align-items: center;

    height: calc(1lh + 16px);
    width: 100%;
}
#search-btn, #filter-btn {
    display: flex;
    align-items: center;
    
    height: inherit;
    cursor: pointer;
    border: 1px solid rgba(192, 192, 192, 0.2);
    background-color: var(--dark-container-color);
}
#search-btn {
    padding: 8px 8px 8px 12px;
    border-radius: 33px 0px 0px 33px;
    border-right: none;
}
#filter-btn {
    padding: 8px 12px 8px 8px;
    border-radius: 0px 33px 33px 0px;
    border-left: none;
}
#search-btn:hover, #filter-btn:hover {
    background-color: var(--hover-color);
}
#search-btn:active, #filter-btn:active {
    background-color: var(--active-color);
}
#explore-search {
    flex: 1;
    height: inherit;
    padding: 8px;
    border-radius: 0px;
    z-index: 2;
}

/* Navbar styles */
#navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    
    position: relative;
    border-radius: 16px;
    padding: 8px;
    background-color: var(--dark-container-color);
}
#navbar > .nav-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    z-index: 1;
    flex: 1;
    border-radius: 33px;
    padding: 8px;
    cursor: pointer;
}
#navbar > .nav-item > .nav-icon {
    width: var(--ic-normal);
    height: var(--ic-normal);
    background-color: var(--secondary-text-color);
}
#navbar > .nav-item > .nav-text {
    font-size: 12px;
    color: var(--secondary-text-color);
    display: none;
    margin-left: 1ch;
    white-space: nowrap;
    overflow: hidden;
}
#navbar > .nav-item.active > .nav-icon, #navbar > .nav-item:hover > .nav-icon {
    background-color: var(--text-color);
}
#navbar > .nav-item.active > .nav-text, #navbar > .nav-item:hover > .nav-text {
    color: var(--text-color);
}

#navbar > .nav-item.active > .nav-text {
    display: initial;
}

#navbar > .flex-spacer {
    display: none;
}

#nav-lavalamp {
    --ll-scale: calc((100% - 16px));
    position: absolute;
    height: calc(var(--ic-normal) + 16px);
    width: calc(var(--ll-scale) * 0.25);
    top: 8px;
    z-index: 0;
    transition: all .35s ease 0s;
    border-radius: 33px;
}

#nav-explore.active ~ #nav-lavalamp {
    left: calc(0% + 8px);
    background-color: var(--hover-color);
}
#nav-rooms.active ~ #nav-lavalamp {
    left: calc(var(--ll-scale) * 0.25 + 8px);
    background-color: var(--hover-color);
}
#nav-messages.active ~ #nav-lavalamp {
    left: calc(var(--ll-scale) * 0.50 + 8px);
    background-color: var(--hover-color);
}
#nav-you.active ~ #nav-lavalamp {
    left: calc(var(--ll-scale) * 0.75 + 8px);
    background-color: var(--hover-color);
}

/* Desktop design */
@media screen and (min-width: 1024px) {
    #app {
        flex-direction: row-reverse;
        gap: 24px;
    }

    .drawer {
        gap: 12px;
    }
    .drawer > .header {
        padding: 16px;
        border-radius: 24px 24px 0px 0px;
    }
    .drawer > .content {
        padding: 16px;
        border-radius: 0px 0px 24px 24px;
    }

    #navbar {
        flex-direction: column;
        justify-content: flex-start;
        gap: 8px;

        padding: 16px;
        border-radius: 24px;
    }
    #navbar > .nav-item {
        flex: 0;
    }
    #navbar > .nav-item > .nav-text {
        font-size: 14px;
        color: var(--text-color);
        display: initial;
    }
    #navbar > .nav-item > .nav-icon {
        width: var(--ic-small);
        height: var(--ic-small);
        background-color: var(--text-color);
    }
    #navbar > .nav-item:hover, #navbar > .nav-item.active {
        background-color: var(--hover-color);
    }
    #navbar > .nav-item:active {
        background-color: var(--active-color);
    }
    #navbar > .flex-spacer {
        display: initial;
        border-bottom: 1px solid var(--hover-color);
    }
    #nav-lavalamp {
        display: none;
    }
}

